--- a/public/admin.html
+++ b/public/admin.html
@@ -11,9 +11,9 @@
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📊</text></svg>">
     
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/admin.css">
-    <link rel="stylesheet" href="css/admin-enhanced.css">
+    <link rel="stylesheet" href="css/reset.css?v=4">
+    <link rel="stylesheet" href="css/admin.css?v=4">
+    <link rel="stylesheet" href="css/admin-enhanced.css?v=4">
     
     <!-- External Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.min.js"></script>
@@ -427,26 +427,13 @@
     <!-- 通知容器 -->
     <div id="notifications"></div>
 
-    <!-- 确认对话框 -->
-    <div id="confirmModal" class="modal">
-        <div class="modal-content">
-            <div class="confirm-dialog">
-                <h3 id="confirmTitle">确认操作</h3>
-                <p id="confirmMessage">您确定要执行此操作吗？</p>
-                <div class="confirm-actions">
-                    <button id="confirmCancel" class="btn btn-outline">取消</button>
-                    <button id="confirmOk" class="btn btn-danger">确认</button>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <script src="js/admin/auth.js"></script>
-    <script src="js/admin/api.js"></script>
-    <script src="js/admin/dashboard.js"></script>
-    <script src="js/admin/messages.js"></script>
-    <script src="js/admin/files.js"></script>
-    <script src="js/admin/users.js"></script>
-    <script src="js/admin/app.js"></script>
+    <script src="js/admin/auth.js?v=4"></script>
+    <script src="js/admin/api.js?v=4"></script>
+    <script src="js/admin/dashboard.js?v=4"></script>
+    <script src="js/admin/messages.js?v=4"></script>
+    <script src="js/admin/files.js?v=4"></script>
+    <script src="js/admin/users.js?v=4"></script>
+    <script src="js/admin/app.js?v=4"></script>
 </body>
 </html>
