--- a/public/index.html
+++ b/public/index.html
@@ -16,34 +16,6 @@
     <link rel="stylesheet" href="./css/responsive.css?v=3">
 </head>
 <body>
-    <!-- 动态背景 -->
-    <div class="animated-background">
-        <!-- 渐变球体 -->
-        <div class="gradient-sphere sphere-1"></div>
-        <div class="gradient-sphere sphere-2"></div>
-        <div class="gradient-sphere sphere-3"></div>
-        <div class="gradient-sphere sphere-4"></div>
-        <div class="gradient-sphere sphere-5"></div>
-        
-        <!-- 浮动粒子 -->
-        <div class="floating-particles">
-            <div class="particle"></div>
-            <div class="particle"></div>
-            <div class="particle"></div>
-            <div class="particle"></div>
-            <div class="particle"></div>
-            <div class="particle"></div>
-            <div class="particle"></div>
-            <div class="particle"></div>
-        </div>
-        
-        <!-- 光线效果 -->
-        <div class="light-rays">
-            <div class="ray"></div>
-            <div class="ray"></div>
-            <div class="ray"></div>
-        </div>
-    </div>
 
     <!-- 苹果风格窗口容器 -->
     <div class="window-container">
@@ -119,7 +91,7 @@
     </div>
 
     <!-- JavaScript 模块 -->
-    <script src="./js/enhanced-background.js?v=4"></script>
+    <script src="./js/frontend-dynamic-background.js?v=1"></script>
     <script src="./js/config.js?v=4"></script>
     <script src="./js/utils.js?v=4"></script>
     <script src="./js/api.js?v=4"></script>
