--- a/public/admin.html
+++ b/public/admin.html
@@ -72,7 +72,7 @@
                     <div class="login-header">
                         <div class="login-icon">✨</div>
                         <h2>用户注册</h2>
-                        <p class="login-subtitle">创建您的管理员账户</p>
+                        <p class="login-subtitle">创建您的账户</p>
                     </div>
                     
                     <div class="form-group">
@@ -102,7 +102,7 @@
                     <div class="form-actions">
                         <button type="submit" class="btn btn-primary">
                             <span class="btn-icon">🎉</span>
-                            创建账户
+                            注册
                         </button>
                         <button type="button" id="showLogin" class="btn btn-link">
                             已有账户？立即登录
